overflow bug fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 #tsparticles {
   z-index: -1;
 }
+
+html, body {
+  overflow-x: hidden;
+}
